# Open-Smart-Shutdown

./: .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  LICENSE  README.md
core/state_monitor/: state.h  state_monitor.cpp  state_monitor.h  state_monitor.tpp  state_monitor_manager.cpp  state_monitor_manager.h
core/state_monitor/events/: event_triggers.h
core/state_monitor/state_evaluator/: in_range_state_evaluator.cpp  in_range_state_evaluator.h  in_range_state_evaluator.tpp  state_evaluator.h  state_evaluator_master.h
core/state_monitor/state_parser/: in_range_state_parser.cpp  in_range_state_parser.h  state_parser.h
core/state_monitor/state_reader/: default_time_state_reader.cpp  default_time_state_reader.h  state_reader.cpp  state_reader.h  state_reader.tpp  state_reader_master.h  time_state_reader.cpp  time_state_reader.h
gui/: main.cpp  main_state_monitor_widget.cpp  main_state_monitor_widget.h  main_window.cpp  main_window.h  state_monitor_creator_widget.cpp  state_monitor_creator_widget.h  state_monitor_widget.cpp  state_monitor_widget.h
src/: CMakeLists.txt  main.cpp
src/core/events/: event_triggers.cpp  event_triggers.h
src/core/state_monitor/: state.cpp  state.h  state_monitor.h  state_monitor.tpp  state_monitor_manager.cpp  state_monitor_manager.h  thread_pool.cpp  thread_pool.h
src/core/state_monitor/state_evaluator/: equal_state_evaluator.h  greater_than_equal_state_evaluator.h  greater_than_state_evaluator.h  greater_than_state_evaluator.tpp  in_range_state_evaluator.h  less_than_equal_state_evaluator.h  less_than_state_evaluator.h  state_evaluator.h  state_evaluator_master.h
src/core/state_monitor/state_reader/: cpu_state_reader.h  disk_state_reader.h  float_shell_state_reader.h  net_state_reader.h  state_reader.h  state_reader_master.h  string_shell_state_reader.h  time_state_reader.cpp  time_state_reader.h
src/core/system_monitor/: system_monitor.h  win_system_monitor.cpp  win_system_monitor.h
src/gui/: configure_widget.cpp  configure_widget.h  configure_widget.h~  icons.qrc  main_state_monitor_widget.cpp  main_state_monitor_widget.h  main_window.cpp  main_window.h  state_monitor_creator_widget.cpp  state_monitor_creator_widget.h  state_monitor_tracker.cpp  state_monitor_tracker.h  state_monitor_widget.cpp  state_monitor_widget.h  state_monitor_widget_delegate.cpp  state_monitor_widget_delegate.h
src/wmi-extended/: wmiclassesextended.hpp
